modify class